# football

./: .dockerignore  Dockerfile  README.md  database.db  docker-compose.yml  pyproject.toml
football/: database.db  database.py  main.py
football/leagues/: models.py  routes.py  schemas.py
football/players/: models.py  routes.py  schemas.py
football/teams/: models.py  routes.py  schemas.py
tests/: conftest.py  test_leagues.py  test_players.py  test_teams.py
